logs/error/profiling_8824.err
  File "/home/c-akshit/assn2/spring2024-assignment2-systems/cs336-systems/cs336_systems/distributed_comm.py", line 42
    if device == 'gpu'
                      ^
SyntaxError: expected ':'
mv: cannot stat 'lm_profiler_stacks.txt': No such file or directory
